--- a/views/entries.mustache
+++ b/views/entries.mustache
@@ -3,11 +3,12 @@
         {{>header}}
     </head>
     <body>
+    <div class="container">
         <h1>{{title}}</h1>
-                <div class="text-right">
-        <a href="/new" class="btn btn-primary">
-            Write in the guestbook
-        </a>
+        <div class="text-end">
+            <a href="/new" class="btn btn-primary">
+                Write in the guestbook
+            </a>
         </div>
         {{#entries}}
             <div>
@@ -24,5 +25,6 @@
         {{^entries}}
             No entries yet.
         {{/entries}}
+        </div>
     </body>
 </html>
