--- a/views/newEntry.mustache
+++ b/views/newEntry.mustache
@@ -15,8 +15,7 @@
         </div>
         <div class="form-group">
             <label for="contents">Entry text</label>
-            <textarea class="form-control" id="contents" name="contents" placeholder="Enter your comments here." rows="3"    required>
-            </textarea>
+            <textarea class="form-control" id="contents" name="contents" placeholder="Enter your comments here." rows="3" required></textarea>
         </div>
         <div class="form-group">
             <input type="submit" value="Post entry" class="btn btn-primary">
